- make default installed master map for /net use "-hosts" instead
  of auto.net.
- fix included map recursive map key lookup.
  - and fix the recursive map key lookup for browsable map case.
- review iand fix master map options update for map reload.
- fix "-fstype=nfs4" handling.
- fix get_query_dn not looking in subtree for LDAP search.

1/9/2006 autofs-5.0.1 rc2
-------------------------
- code cleanup.
- fix race for current map source.
- cthon map parser corrections.
- cthon multi-map locking fix and current race corrections.
- cthon shutdown expire fix.
- cthon more map parser corrections.
- cthon cleanup and corrections.
- cthon more cleanup and corrections.
- cthon correction to host validation.
- cthon fix submount operation broken by above.
- cthon more parser corrections and attempt to fix multi-mounts
  with various combinations of submounts (still broken).
- cthon fix expire of various forms of nested mounts.
- cthon fix some shutdown races.
- cthon corrections for above patch and fix shutdown expire.
- cthon fix expire of wildcard and program mounts broken by above
  patches.
- tidy up directory cleanup and add validation check to rmdir_path.
- remove SIGCHLD handler.
- alter expire locking of multi-mounts to lock sub-tree instead of
  entire tree.
- review verbose message feedback and update.
- correction for expire of multi-mounts.
- spelling corrections to release notes (Jeff Moyer).
- expire individual submounts.
- add ino_index locking.
- fix nested submount expiring away when pwd is base of submount.
- more expire re-work to cope better with shutdown following cthon tests.
- allow hostname to start with numeric when validating.
- fix included map lookup.
- fix directory cleanup on expire.
- fix task cancelation at shutdown.
- fix included map wild card key lookup.
- fix task cancelation at shutdown (more).
- fix concurrent mount and expire race with nested submounts.
- fix colon escape handling.
- fix recusively referenced bind automounts.